--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Mangorin-kokkikirja-Jutelma-korkeimman-diplomatian-alalta_68851
 _version: 0.1.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Etlar, Carit
@@ -11,6 +14,8 @@ creator:
     gutenberg_agent_id: '31996'
     url: http://www.gutenberg.org/2009/agents/31996
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/68851#Mangorin-kokkikirja-Jutelma-korkeimman-diplomatian-alalta
 gutenberg_issued: '2022-08-27'
 identifiers:
   gutenberg: '68851'
